# llm-speedway

./: .gitignore  AGENTS.md  README.md  erl_crash.dump  pyproject.toml
.agents/skills/ship/: SKILL.md
harness/: __init__.py  config.py  orchestrate.py  preflight.py  registry.py  results.py  results_cli.py  run_all.py  run_experiment.py  service.py  test_runner.py  timers.py  workspace.py
harness/agents/: __init__.py  amp.py  base.py  claude_code.py  codex_cli.py
harness/tests/: __init__.py  test_agents.py  test_config.py  test_results.py  test_run_all.py  test_service.py  test_test_runner.py  test_timers.py  test_workspace.py
prompts/system/: default.md  force-go.md  force-haskell.md  short-functions.md
prompts/task_wrappers/: http-service-contract.md  http-service-self-testing.md
tasks/: README.md
tasks/conference-scheduler/: SPEC.md  harness.yaml
tasks/conference-scheduler/starter/: .gitkeep
tasks/conference-scheduler/tests/: conftest.py  test_basic.py  test_complex.py  test_health.py  test_infeasible.py  test_intermediate.py  test_optimization.py  test_trivial.py  test_validation.py  test_validator.py
tasks/issue-tracker/: SPEC.md  harness.yaml
tasks/issue-tracker/starter/: .gitignore  README.md  run.sh
tasks/issue-tracker/tests/: conftest.py  test_comments.py  test_health.py  test_integration.py  test_issue_labels.py  test_issues.py  test_labels.py  (+1 more)
tasks/language-rewrite/: SPEC.md  harness.yaml
tasks/rich-export-refactor/: SPEC.md  harness.yaml
tasks/rich-refactor/: SPEC.md  harness.yaml
tasks/smoke/: SPEC.md  harness.yaml
(+15 files in other folders)
